<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="otpVerificationVM" type="com.amankumarsapplication.app.modules.otpverification.data.viewmodel.OtpVerificationVM"/>
    </data>
    <LinearLayout android:id="@+id/linearOTPVerificatio"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageBack"
            android:layout_gravity="start"
            android:layout_height="@dimen/_31pxh"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="@dimen/_31pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_4pxh}"
            imageRes="@{@drawable/img_back}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_back"/>
        <ImageView android:id="@+id/imageFrame"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_272pxh"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_51pxv"
            android:layout_width="@dimen/_295pxh"
            android:scaleType="fitXY" imageRes="@{@drawable/img_frame}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_frame"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtOTPVerificatio"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_118pxh"
            android:layout_marginStart="@dimen/_118pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{otpVerificationVM.otpVerificationModel.txtOTPVerificatio}"
            style="@style/txtPoppinsmedium14" tools:text="@string/msg_otp_verificatio"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtEnterOTPsent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_72pxh"
            android:layout_marginStart="@dimen/_72pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{otpVerificationVM.otpVerificationModel.txtEnterOTPsent}"
            style="@style/txtPoppinslight12" tools:text="@string/msg_enter_otp_sent"/>
        <com.mukesh.OtpView android:focusableInTouchMode="true"
            android:id="@+id/otpViewOtpview" android:inputType="number"
            android:itemBackground="@color/white_A700"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="wrap_content" app:OtpItemCount="4"
            app:OtpItemHeight="@dimen/_77pxv"
            app:OtpItemSpacing="@dimen/_26pxh"
            app:OtpItemWidth="@dimen/_63pxh"
            app:OtpLineColor="@android:color/transparent" app:OtpViewType="rectangle"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtDontreceivet"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_71pxh"
            android:layout_marginStart="@dimen/_71pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{otpVerificationVM.otpVerificationModel.txtDontreceivet}"
            style="@style/txtPoppinslight12" tools:text="@string/msg_don_t_receive_t"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnVerifyProceedOne"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@string/msg_verify_procee"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/msg_verify_procee"/>
    </LinearLayout>
</layout>
