<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="homeVM" type="com.amankumarsapplication.app.modules.home.data.viewmodel.HomeVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearHOME"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumndeliverytwo"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2pxh"
            android:layout_marginTop="@dimen/_49pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <ImageView android:id="@+id/imageDeliveryTwo"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_236pxh"
                android:layout_marginEnd="@dimen/_73pxh"
                android:layout_marginStart="@dimen/_75pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="@dimen/_240pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_delivery2}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_delivery2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtFarmTohome"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginEnd="@dimen/_75pxh"
                android:layout_marginStart="@dimen/_75pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{homeVM.homeModel.txtFarmTohome}"
                style="@style/txtPoppinsbold16" tools:text="@string/lbl_farm_to_home"/>
        </LinearLayout>
        <ImageView android:id="@+id/imageGroupFiftyEight"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_5pxh"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_49pxv"
            android:layout_width="@dimen/_69pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_group58"
            tools:ignore="ContentDescription" tools:src="@drawable/img_group58"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGetStarted"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_122pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{homeVM.homeModel.txtGetStarted}"
            style="@style/txtPoppinsregular14" tools:text="@string/lbl_get_started"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowlaptop"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylecornerRadius">
            <ImageView android:id="@+id/imageLaptop"
                android:layout_height="@dimen/_28pxh"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="@dimen/_35pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_laptop"
                tools:ignore="ContentDescription" tools:src="@drawable/img_laptop"/>
            <View android:background="@color/bluegray_400"
                android:id="@+id/lineLineOne"
                android:layout_height="@dimen/_32pxv"
                android:layout_marginBottom="@dimen/_7pxv"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_weight="0.02" android:layout_width="0dp"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtEnterMobileNu"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginEnd="@dimen/_76pxh"
                android:layout_marginStart="@dimen/_46pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_weight="0.81" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{homeVM.homeModel.txtEnterMobileNu}"
                style="@style/txtPoppinsregular16" tools:text="@string/msg_enter_mobile_nu"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnContinue"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@string/lbl_continue"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_continue"/>
        <TextView android:id="@+id/txtBySigningupy"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content"
            android:text="@{homeVM.homeModel.txtBySigningupy}"
            style="@style/txtPoppinsregular10" tools:text="@string/msg_by_signing_up_y"/>
    </LinearLayout>
</layout>
