<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="personalDetailsVM" type="com.amankumarsapplication.app.modules.personaldetails.data.viewmodel.PersonalDetailsVM"/>
    </data>
    <FrameLayout android:id="@+id/framePersonaldetail"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnback"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowback"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageBack"
                    android:layout_height="@dimen/_31pxh"
                    android:layout_marginBottom="@dimen/_149pxv"
                    android:layout_width="@dimen/_31pxh"
                    android:scaleType="fitXY"
                    cornerRadius="@{@dimen/_4pxh}"
                    imageRes="@{@drawable/img_back}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_back"/>
                <ImageView android:id="@+id/imageSearchMaleUse"
                    android:layout_height="@dimen/_153pxh"
                    android:layout_marginStart="@dimen/_72pxh"
                    android:layout_marginTop="@dimen/_27pxv"
                    android:layout_width="@dimen/_153pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_searchmaleuse}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_searchmaleuse"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtFullname"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_33pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{personalDetailsVM.personalDetailsModel.txtFullname}"
                style="@style/txtPoppinsregular13" tools:text="@string/lbl_full_name"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_bluegray_400_radius_9"
                android:ellipsize="end"
                android:id="@+id/etRectangleTwentyTwo"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={personalDetailsVM.personalDetailsModel.etRectangleTwentyTwoValue}"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end" android:id="@+id/txtEMAIL"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{personalDetailsVM.personalDetailsModel.txtEMAIL}"
                style="@style/txtPoppinsregular13" tools:text="@string/lbl_email"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_bluegray_400_radius_9"
                android:ellipsize="end"
                android:id="@+id/etRectangleTwentyTwoOne"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={personalDetailsVM.personalDetailsModel.etRectangleTwentyTwoOneValue}"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtMOBILENUMBER"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{personalDetailsVM.personalDetailsModel.txtMOBILENUMBER}"
                style="@style/txtPoppinsregular13" tools:text="@string/lbl_mobile_number"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_bluegray_400_radius_9"
                android:ellipsize="end"
                android:id="@+id/etRectangleTwentyTwoTwo"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={personalDetailsVM.personalDetailsModel.etRectangleTwentyTwoTwoValue}"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{personalDetailsVM.personalDetailsModel.txtLanguage}"
                style="@style/txtPoppinsregular13" tools:text="@string/lbl_pin_code"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_bluegray_400_radius_9"
                android:ellipsize="end"
                android:id="@+id/etRectangleTwentyTwoThree"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={personalDetailsVM.personalDetailsModel.etRectangleTwentyTwoThreeValue}"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtFullAddress"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{personalDetailsVM.personalDetailsModel.txtFullAddress}"
                style="@style/txtPoppinsregular13" tools:text="@string/lbl_full_address"/>
            <View
                android:background="@drawable/rectangle_bg_white_a700_border_bluegray_400_radius_9"
                android:id="@+id/viewRectangleTwentyTwoFour"
                android:layout_gravity="end"
                android:layout_height="@dimen/_75pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_285pxh"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnframeten"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_58pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegreen_700cornerRadius">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtFrameTen"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginEnd="@dimen/_87pxh"
                    android:layout_marginStart="@dimen/_87pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="match_parent"
                    android:paddingStart="@dimen/_27pxh"
                    android:paddingTop="@dimen/_7pxv"
                    android:singleLine="true"
                    android:text="@{personalDetailsVM.personalDetailsModel.txtFrameTen}"
                    style="@style/txtSolidRounded" tools:text="@string/lbl_proceed"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
